[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-estimation"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "battery-data-toolkit",
    "moirae @ git+https://github.com/ROVI-org/auto-soh.git",
]

[tool.setuptools]
packages = ["Utils"]
